more spacing fixing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,9 +81,6 @@ form{
 *****/
 .bodyDiv{
 	margin-top:100px;
-}
-.body-part{
-	margin-top:20px;
 	margin-left:30px;
 	margin-right:30px;
 }
